--- a/src/mibg3/Agent/RegAlien.form
+++ b/src/mibg3/Agent/RegAlien.form
@@ -161,7 +161,9 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Registrera en ny Alien"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="message()" type="code"/>
+        </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
@@ -325,16 +327,6 @@
       </AuxValues>
     </Component>
     <Component class="javax.swing.JComboBox" name="agentCB">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Agent O"/>
-            <StringItem index="1" value="Agent K"/>
-            <StringItem index="2" value="Agent J"/>
-            <StringItem index="3" value="Agent Z"/>
-          </StringArray>
-        </Property>
-      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
