--- a/src/mibg3/Admin/AdminMeny.form
+++ b/src/mibg3/Admin/AdminMeny.form
@@ -26,21 +26,6 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="minProfilKnapp" min="-2" pref="142" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="hanteraAgentKnapp" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" attributes="0">
-                              <Component id="hanteraAliensKnapp" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="hanteraUtrKnapp" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -49,6 +34,17 @@
                               <Component id="välkomenLabel" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="valjAltLbel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="hanteraAgentKnapp" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="hanteraAliensKnapp" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="hanteraUtrKnapp" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
               </Group>
@@ -66,17 +62,14 @@
               <Component id="valjAltLbel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
               <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="minProfilKnapp" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
-                  <Component id="hanteraAgentKnapp" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
-              </Group>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+              <Component id="hanteraAgentKnapp" min="-2" pref="59" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="hanteraUtrKnapp" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
                   <Component id="hanteraAliensKnapp" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="30" max="32767" attributes="0"/>
+              <EmptySpace pref="16" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -88,14 +81,6 @@
           <Font name="Dialog" size="24" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="V&#xe4;lkommen!"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="minProfilKnapp">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="18" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Min profil"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JToggleButton" name="hanteraAliensKnapp">
